public/jsonTable.css
.tableContainer {
    overflow: auto;
    max-width: 100%;
}

.tableContainer.expanded {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: #fff;
    overflow: auto;
    z-index: 100;
}

.tableContainer.expanded > * {
    padding: 1rem;
}

.jsonTable {
    border-spacing: 0;
    width: 100%;
    border: 1px solid #e7e5e4;
    border-collapse: collapse;
    border-left-width: 0;
    overflow: auto;
    font-family: 'IBM Plex Mono', monospace;
}

.jsonTable .jsonTable {
    border-bottom-width: 0;
}

.jsonTable tr {
    border-left: 2px solid #e7e5e4;
}

.jsonTable tr:hover {
    border-left-color: #57534e;
}

.jsonTable, .jsonTable tbody, .jsonTable tr, .jsonTable th, .jsonTable td {
    margin: 0;
    padding: 0;
    vertical-align: text-top;
}

.jsonTable th, .jsonTable td {
    border-bottom: 1px solid #e7e5e4;
    text-align: left;
    padding: 3px;
}

.jsonTable tr.hasSubTable > th, .jsonTable tr tr.hasSubTable td {
    padding: 3px 3px 0 3px;
}

.jsonTable th {
    background: #f5f5f4;
}

.jsonTable td {
    background: #fff;
}

.jsonTable td.odd {
    background: #fafaf9;
}

.jsonTable tr:last-child > th, .jsonTable tr:last-child > td {
    border-bottom: none;
}

.jsonTable .jsonTable > tbody > tr > th:first-child, .jsonTable .jsonTable > tbody > tr > td:first-child {
    padding-left: 9px;
}

.jsonTable td.subTableCell {
    padding: 0 !important;
}

.tableContainer > div {
    margin-bottom: 20px;
}

.toggler {
    cursor: pointer;
    display: inline-block;
    font-size: 1.3rem;
    user-select: none;
    padding: 0.2rem 0.2rem;
    background: white;
    margin: 0.3rem 0.6rem;
    border-radius: 0.7rem;
    border: 1px solid #b45309;
}

.emptyTable::after {
    display: block;
    content: "empty";
    background: red;
    color: white;
}

.jsonTable th:hover, .jsonTable td:hover {
    background: #f5f5f4;
}

